# TZmCFI

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
Example/: Common.mak
Example/App/: An521.hpp  An521.ld  Base64.hpp  FreeRTOSConfig.h  LibcStub.cpp  Main.cpp  Main.hpp  Makefile  OSHooks.cpp  Pl011Driver.cpp  Pl011Driver.hpp  Startup.s  Utils.hpp
Example/FreeRTOS/: tasks.c
Example/Secure/: An521.ld  LibcStub.cpp  Main.cpp  Makefile  Startup.s  TzMpcDriver.cpp  TzMpcDriver.hpp
Headers/TZmCFI/: Gateway.h
NonSecure/: ExceptionTrampolines.h  ExceptionTrampolines.s
Patcher/: Cargo.toml  PatchAsm.py
Patcher/src/: gas.rs  main.rs
SecureMonitor/: Assert.cpp  Assert.hpp  Exception.cpp  Exception.hpp  LinearAllocator.cpp  LinearAllocator.hpp  Mutex.hpp  SecureAPI.cpp  Thread.cpp  Thread.hpp
Tools/MakeImplib/: Cargo.toml
examples/: README.md  build.zig  monitor.zig  nonsecure-basic.zig  nonsecure-bench-coremark.zig  nonsecure-bench-latency.zig  nonsecure-bench-rtos.zig  nonsecure-profile-rtos.zig  nonsecure-profile-ses.zig  nonsecure-rtosbasic.cpp  nonsecure-rtosbasic.zig  nonsecure.zig  secure.zig
examples/common/: gateways.zig  startup.S  vectable.zig
examples/drivers/: an505.zig  (+6 more)
examples/tools/runbench/: Cargo.toml
examples/tools/runbench/src/: app.rs  bench_rtos.rs  main.rs  subprocess.rs  target.rs
examples/tools/runbench/src/app/: bench_coremark.rs  bench_latency.rs  bench_rtos.rs  profile_rtos.rs  profile_ses.rs
src/: constants.zig  monitor.zig  nonsecure_vector.S  nonsecure_vector_ses.S  nonsecure_vector_unnest.S
(+82 files in other folders)
