[package]
name = "tzmcfi_runbench"
version = "0.1.0"
authors = ["Tomoaki Kawada <tcppjp@gmail.com>"]
edition = "2018"

[dependencies]
aho-corasick = "0.7.10"
env_logger = "0.7.0"
bstr = "0.2.13"
log = "0.4"
structopt = "0.3.0"
arg_enum_proc_macro = "0.3.0"
serialport = "3.3.0"
thiserror = "1.0.19"
tokio = { version = "0.2.21", features = ["process", "macros", "time", "io-util"] }
futures = "0.3.0"
itertools = "0.9.0"
